--- a/wholesaler.html
+++ b/wholesaler.html
@@ -45,7 +45,7 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
   <input id="pname" placeholder="Product Name">    
   <input id="pprice" type="number" placeholder="Price">    
   <textarea id="pdetail" placeholder="Detail"></textarea>    
-  <input id="pimg" type="file" accept="image/*">    
+  <input id="pimg" type="file" accept="image/*" multiple>    
   <button class="primary" onclick="addProduct()">Save</button>    
   <button onclick="closeAll()">Cancel</button>    
  </div>    
