--- a/wholesaler.html
+++ b/wholesaler.html
@@ -61,7 +61,8 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
   <div class="modal-content">
     <h3 id="d_name"></h3>
 
-    <div id="d_images"></div>
+    <div class="slider" id="d_images"></div>
+<div class="dots" id="d_dots"></div>
 
     <p id="d_price"></p>
     <p id="d_detail"></p>
