--- a/wholesaler.html
+++ b/wholesaler.html
@@ -99,7 +99,24 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
     <button onclick="closeAll()">Close</button>
   </div>
 </div>
+<!-- EDIT PRODUCT MODAL -->
+<div class="modal" id="editProductModal">
+  <div class="modal-content">
+    <h3>Edit Product</h3>
 
+    <input id="edit_name" placeholder="Product Name">
+    <input id="edit_price" type="number" placeholder="Price">
+    <textarea id="edit_detail" placeholder="Detail"></textarea>
+
+    <input type="file" id="edit_images" multiple>
+
+    <div id="edit_images_preview"
+         style="display:flex;gap:6px;flex-wrap:wrap"></div>
+
+    <button class="primary" onclick="updateProduct()">Update</button>
+    <button onclick="closeAll()">Cancel</button>
+  </div>
+</div>
  <input id="edit_name" placeholder="Product Name">
 <input id="edit_price" type="number" placeholder="Price">
 <textarea id="edit_detail" placeholder="Detail"></textarea>
