--- a/retailer.html
+++ b/retailer.html
@@ -72,7 +72,8 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
 <div class="modal" id="detailModal">
   <div class="modal-content">
     <h3 id="dName"></h3>
-    <img id="dImg" style="width:100%;border-radius:10px">
+    <div class="slider" id="dImages"></div>
+<div class="dots" id="dDots"></div>
     <p id="dDesc"></p>
     <p id="dPrice"></p>
     <select id="vehicleType">
