--- a/retailer.html
+++ b/retailer.html
@@ -44,6 +44,38 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
 .status-delivery{ background:#e0f2fe;color:#075985; }
 .status-delivered{ background:#ede9fe;color:#5b21b6; }
 .status-time{font-size:13px;color:#555;}
+.slider{
+  display:flex;
+  overflow-x:auto;
+  scroll-snap-type:x mandatory;
+}
+
+.slider img{
+  min-width:100%;
+  height:200px;
+  object-fit:cover;
+  scroll-snap-align:center;
+  border-radius:10px;
+  flex-shrink:0;
+}
+
+.dots{
+  display:flex;
+  justify-content:center;
+  gap:6px;
+  margin:8px 0;
+}
+
+.dot{
+  width:8px;
+  height:8px;
+  border-radius:50%;
+  background:#cbd5e1;
+}
+
+.dot.active{
+  background:#16a34a;
+}
 </style>
 </head>
 <body>
@@ -143,6 +175,7 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
   </div>
 </div>
 
+  
 <script>
 const API = "https://shopbacked-vmhs.onrender.com";
 
