--- a/retailer.html
+++ b/retailer.html
@@ -183,6 +183,9 @@ let selectedProduct = null;
 let cart = JSON.parse(localStorage.getItem("cart") || "[]");
 
 // DOM elements
+const dImages = document.getElementById("dImages");
+const dDots   = document.getElementById("dDots");
+  
 const products = document.getElementById("products");
 const detailModal = document.getElementById("detailModal");
 const dName = document.getElementById("dName");
