--- a/retailer.html
+++ b/retailer.html
@@ -117,7 +117,8 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
     <h3 id="dName"></h3>
     <div class="slider" id="dImages"></div>
 <div class="dots" id="dDots"></div>
-    <p id="dDesc"></p>
+    <p id="dDesc" class="desc short"></p>
+<span id="descToggle" class="desc-toggle" onclick="toggleDesc()">More ⬇</span>
     <p id="dPrice"></p>
     <select id="vehicleType">
       <option value="">Select Vehicle</option>
