--- a/retailer.html
+++ b/retailer.html
@@ -150,7 +150,10 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
     </select>
     <p id="dDelivery"></p>
     <p id="dTotal"></p>
-    <button type="button" onclick="directBuy(event)">⚡ Buy Now</button>
+    <button class="buy-btn" onclick="directBuy(event)">
+  <i class="bi bi-lightning-fill"></i>
+  Buy Now
+</button>
 <button type="button" onclick="closeAll()">Close</button>
   </div>
 </div>
