--- a/retailer.html
+++ b/retailer.html
@@ -141,7 +141,13 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
 <div class="dots" id="dDots"></div>
     <p id="dDesc" class="desc short"></p>
 <span id="descToggle" class="desc-toggle" onclick="toggleDesc()">More ⬇</span>
-    <p id="dPrice"></p>
+    <div class="price-box">
+  <span class="price-label">Price</span>
+  <div class="price-row">
+    <i class="bi bi-currency-rupee"></i>
+    <span id="dPrice" class="price-value">0</span>
+  </div>
+</div>
     <select id="vehicleType">
       <option value="">Select Vehicle</option>
       <option value="two_wheeler">Two Wheeler</option>
