--- a/retailer.html
+++ b/retailer.html
@@ -108,7 +108,39 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
   margin-top:4px;
   user-select:none;
 }
-  
+.price-box{
+  margin:12px 0;
+  padding:14px 16px;
+
+  background: linear-gradient(135deg,#f0fdf4,#dcfce7);
+  border:1px solid #bbf7d0;
+  border-radius:14px;
+}
+
+.price-label{
+  font-size:12px;
+  color:#15803d;
+  font-weight:600;
+  text-transform:uppercase;
+}
+
+.price-row{
+  display:flex;
+  align-items:center;
+  gap:4px;
+  margin-top:6px;
+}
+
+.price-row i{
+  font-size:20px;
+  color:#16a34a;
+}
+
+.price-value{
+  font-size:26px;
+  font-weight:700;
+  color:#14532d;
+}  
 </style>
 </head>
 <body>
