--- a/retailer.html
+++ b/retailer.html
@@ -109,38 +109,39 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
   user-select:none;
 }
 .price-box{
-  margin:12px 0;
-  padding:14px 16px;
+  margin:8px 0;
+  padding:8px 12px;
 
-  background: linear-gradient(135deg,#f0fdf4,#dcfce7);
+  background: linear-gradient(135deg,#f0fdf4,#ecfeff);
   border:1px solid #bbf7d0;
-  border-radius:14px;
+  border-radius:10px;
 }
 
 .price-label{
-  font-size:12px;
-  color:#15803d;
+  font-size:10px;
+  color:#16a34a;
   font-weight:600;
   text-transform:uppercase;
+  letter-spacing:.4px;
 }
 
 .price-row{
   display:flex;
   align-items:center;
-  gap:4px;
-  margin-top:6px;
+  gap:2px;
+  margin-top:2px;
 }
 
 .price-row i{
-  font-size:20px;
+  font-size:16px;
   color:#16a34a;
 }
 
 .price-value{
-  font-size:26px;
+  font-size:20px;
   font-weight:700;
   color:#14532d;
-}  
+}
 </style>
 </head>
 <body>
