--- a/retailer.html
+++ b/retailer.html
@@ -175,7 +175,7 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
     <p id="dDesc" class="desc short"></p>
 <span id="descToggle" class="desc-toggle" onclick="toggleDesc()">More ⬇</span>
     <div class="price-box">
-  <span class="price-label">Price</span>
+  <span class="price-label"> </span>
   <div class="price-row">
     <i class="bi bi-currency-rupee"></i>
     <span id="dPrice" class="price-value">0</span>
