--- a/retailer.html
+++ b/retailer.html
@@ -178,7 +178,7 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
   <span class="price-label"> </span>
   <div class="price-row">
     <i class="bi bi-currency-rupee"></i>
-    <span id=" " class="price-value">0</span>
+    <span id="dPrice" class="price-value">0</span>
   </div>
 </div>
     <select id="vehicleType">
