--- a/retailer.html
+++ b/retailer.html
@@ -17,7 +17,14 @@ body{margin:0;background:#f3f6fb}
 .header{margin-top:15px;background:#fff;padding:15px;border-radius:12px;text-align:center;box-shadow:0 5px 15px rgba(0,0,0,.08)}
 .products-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:10px;margin-top:20px}
 .product-card{background:#fff;padding:8px;border-radius:12px;box-shadow:0 3px 8px rgba(0,0,0,.08)}
-.product-card img{width:100%;height:90px;object-fit:cover;border-radius:8px}
+.product-card img{
+  width:100%;
+  height:110px;              /* thoda bada */
+  object-fit:contain;        /* 🔥 FULL IMAGE dikhegi */
+  background:#f8fafc;        /* white/soft bg */
+  padding:6px;               /* breathing space */
+  border-radius:10px;
+}
 .price{color:#16a34a;font-weight:600;font-size:13px}
 .actions{display:flex;gap:5px;margin-top:6px}
 .actions button{flex:1;border:none;border-radius:8px;padding:6px;font-size:12px;cursor:pointer}
