--- a/wholesaler.html
+++ b/wholesaler.html
@@ -71,7 +71,8 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
 </div>  <!-- PRODUCT -->  <div class="modal" id="productModal">    
  <div class="modal-content">    
   <h3>Add Product</h3>    
-  <input id="pname" placeholder="Product Name">    
+  <input id="pname" placeholder="Product Name">
+  <input id="pcategory" placeholder="Enter Category (eg: Grocery, Mobile)">
   <input id="pprice" type="number" placeholder="Price">    
   <textarea id="pdetail" placeholder="Detail"></textarea>    
   <input id="pimg" type="file" accept="image/*" multiple>    
