--- a/wholesaler.html
+++ b/wholesaler.html
@@ -58,7 +58,7 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
   </div>    <div class="header">    
     <h3>Wholesaler Dashboard</h3>    
     <small>ID: <b id="widText"></b></small>    
-  </div>    <div class="products-grid" id="products"></div>    
+  </div>    <div id="categories"></div>    
 </div>  <!-- PROFILE -->  <div class="modal" id="profileModal">    
  <div class="modal-content">    
   <h3>Shop Profile</h3>    
