--- a/wholesaler.html
+++ b/wholesaler.html
@@ -543,7 +543,7 @@ async function loadOrders(){
       }
     </div>
   `).join("");
-}    loadProducts();
+}    loadCategories();
 </script>  </body>
 
 </html>
