--- a/wholesaler.html
+++ b/wholesaler.html
@@ -48,7 +48,35 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
 .dot.active{
   background:#2563eb;
 }
+.category-grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fill,minmax(140px,1fr));
+  gap:14px;
+}
 
+.category-card{
+  background:#fff;
+  border-radius:14px;
+  padding:18px;
+  text-align:center;
+  cursor:pointer;
+  box-shadow:0 4px 10px rgba(0,0,0,.08);
+  transition:.2s;
+}
+
+.category-card:hover{
+  transform:translateY(-4px);
+}
+
+.category-card i{
+  font-size:28px;
+  color:#2563eb;
+}
+
+.category-card h4{
+  margin-top:8px;
+  font-size:15px;
+}
  
 </style>  </head>  <body>    
 <div class="main">    <div class="icon-bar">    
