--- a/category.html
+++ b/category.html
@@ -87,7 +87,7 @@ body{
 <div id="products" class="products"></div>
 
 <script>
-const API = "YOUR_API_URL"; // 🔴 CHANGE
+const API = "https://shopbacked-vmhs.onrender.com";
 const params = new URLSearchParams(location.search);
 const category = params.get("cat");
 const wid = params.get("wid");
