--- a/category.html
+++ b/category.html
@@ -1,133 +1,131 @@
-<!doctype html>
-<html lang="hi">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta charset="UTF-8">
 <title>Category Products</title>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
-
 <style>
-body{
-  margin:0;
-  font-family:Poppins,system-ui;
-  background:#f4f7fb;
-}
-
-/* HEADER */
-.header{
-  display:flex;
-  align-items:center;
-  gap:10px;
-  padding:14px;
-  background:#fff;
-  box-shadow:0 2px 8px rgba(0,0,0,.08);
-}
-
-.header i{
-  font-size:22px;
-  cursor:pointer;
-}
-
-.header h3{
-  margin:0;
-  font-size:18px;
-}
-
-/* PRODUCTS */
-.products{
-  padding:14px;
-  display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(160px,1fr));
-  gap:14px;
-}
-
-.product-card{
-  background:#fff;
-  border-radius:14px;
-  padding:10px;
-  box-shadow:0 4px 12px rgba(0,0,0,.08);
-  cursor:pointer;
-  transition:.2s;
-}
-
-.product-card:hover{
-  transform:translateY(-4px);
-}
-
-.product-card img{
-  width:100%;
-  height:140px;
-  object-fit:cover;
-  border-radius:10px;
-}
-
-.product-card h4{
-  font-size:14px;
-  margin:6px 0 2px;
-}
-
-.price{
-  color:#16a34a;
-  font-weight:600;
-  font-size:14px;
-}
+*{box-sizing:border-box;font-family:Poppins,sans-serif}
+body{margin:0;background:#f3f6fb}
+.main{padding:20px;max-width:900px;margin:auto}
+.header{margin-top:15px;background:#fff;padding:15px;border-radius:12px;text-align:center;box-shadow:0 5px 15px rgba(0,0,0,.1)}
+.products-grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(140px,1fr));gap:14px;margin-top:20px}
+.product-card{background:#fff;padding:10px;border-radius:12px;text-align:center;cursor:pointer;box-shadow:0 3px 8px rgba(0,0,0,.08);transition:.2s}
+.product-card:hover{transform:translateY(-4px)}
+.product-card img{width:100%;height:100px;object-fit:cover;border-radius:8px}
+.product-card h4{margin:8px 0;font-size:14px}
+.price{color:#2563eb;font-weight:600;font-size:13px}
+.modal{position:fixed;inset:0;background:rgba(0,0,0,.5);display:none;align-items:center;justify-content:center;z-index:20}
+.modal-content{background:#fff;padding:20px;width:90%;max-width:500px;border-radius:15px;max-height:85vh;overflow:auto}
+.slider{display:flex;overflow-x:auto;scroll-snap-type:x mandatory;gap:10px;margin-top:10px}
+.slider img{width:100%;border-radius:10px;scroll-snap-align:center;flex-shrink:0}
+.dots{display:flex;justify-content:center;gap:6px;margin:8px 0}
+.dot{width:8px;height:8px;border-radius:50%;background:#cbd5e1}
+.dot.active{background:#2563eb}
+.back-btn{background:#2563eb;color:#fff;border:none;padding:8px 12px;border-radius:8px;cursor:pointer;margin-top:10px}
 </style>
 </head>
-
 <body>
+<div class="main">
+  <div class="header">
+    <h3 id="catTitle">Category</h3>
+    <button class="back-btn" onclick="goBack()">⬅ Back</button>
+  </div>
 
-<!-- HEADER -->
-<div class="header">
-  <i class="bi bi-arrow-left" onclick="history.back()"></i>
-  <h3 id="catTitle"></h3>
+  <div class="products-grid" id="products"></div>
 </div>
 
-<!-- PRODUCTS -->
-<div id="products" class="products"></div>
+<!-- PRODUCT DETAIL MODAL -->
+<div class="modal" id="productDetailModal">
+  <div class="modal-content">
+    <h3 id="d_name"></h3>
+    <div class="slider" id="d_images"></div>
+    <div class="dots" id="d_dots"></div>
+    <p id="d_price"></p>
+    <p id="d_detail"></p>
+    <button onclick="closeAll()">Close</button>
+  </div>
+</div>
 
 <script>
-const API = "https://shopbacked-vmhs.onrender.com";
-const params = new URLSearchParams(location.search);
-const category = params.get("cat");
-const wid = params.get("wid");
+const API="https://shopbacked-vmhs.onrender.com";
+const TOKEN=localStorage.getItem("token");
+const WID=localStorage.getItem("userId");
+const ROLE=localStorage.getItem("role");
 
-catTitle.innerText = category;
+// Auth check
+if(!TOKEN || !WID || ROLE!=="wholesaler"){
+  alert("Login again");
+  location.href="index.html";
+}
 
+// Get category from URL
+const params = new URLSearchParams(window.location.search);
+const category = params.get("cat") || "Other";
+document.getElementById("catTitle").innerText = category;
+
+const productsEl = document.getElementById("products");
+const productDetailModal = document.getElementById("productDetailModal");
+const d_name = document.getElementById("d_name");
+const d_images = document.getElementById("d_images");
+const d_dots = document.getElementById("d_dots");
+const d_price = document.getElementById("d_price");
+const d_detail = document.getElementById("d_detail");
+
+function goBack(){
+  window.history.back();
+}
+function closeAll(){
+  document.querySelectorAll(".modal").forEach(m=>m.style.display="none");
+}
+
+// Load products of this category
 async function loadCategoryProducts(){
+  const res = await fetch(`${API}/api/products/wholesaler/${WID}`);
+  const d = await res.json();
 
-  const r = await fetch(
-    API + "/api/products/wholesaler/" + wid
-  );
-  const d = await r.json();
+  const filtered = (d.products || []).filter(p => (p.category || "Other") === category);
 
-  const list = d.products.filter(
-    p => p.category === category
-  );
-
-  if(!list.length){
-    products.innerHTML = "<p>No products found</p>";
+  if(!filtered.length){
+    productsEl.innerHTML = "<p>No products in this category</p>";
     return;
   }
 
-  products.innerHTML = list.map(p=>`
-    <div class="product-card"
-      onclick='openDetail(${JSON.stringify(p)})'>
-      <img src="${p.images?.[0] || p.image}">
+  productsEl.innerHTML = filtered.map(p=>`
+    <div class="product-card" onclick="openProductDetail('${p._id}')">
+      <img src="${p.images?.[0] || ''}">
       <h4>${p.productName}</h4>
       <div class="price">₹${p.price}</div>
     </div>
   `).join("");
 }
 
-/* 🔥 PRODUCT DETAIL (reuse existing modal) */
-function openDetail(p){
-  localStorage.setItem("selectedProduct", JSON.stringify(p));
-  location.href = "product-detail.html";
+// Product detail modal
+async function openProductDetail(id){
+  productDetailModal.style.display = "flex";
+  const res = await fetch(`${API}/api/products/${id}`);
+  const data = await res.json();
+  if(!data.success) return;
+
+  const p = data.product;
+
+  d_name.innerText = p.productName;
+  d_price.innerText = "₹" + p.price;
+  d_detail.innerText = p.detail || "";
+
+  d_images.innerHTML = (p.images || []).map(img => `<img src="${img}">`).join("");
+  d_dots.innerHTML = (p.images || []).map((_,i)=>`<div class="dot ${i===0?'active':''}"></div>`).join("");
+
+  d_images.onscroll = () => {
+    const index = Math.round(d_images.scrollLeft / d_images.clientWidth);
+    [...d_dots.children].forEach((d,i)=>d.classList.toggle("active", i===index));
+  };
 }
 
+// Initial load
 loadCategoryProducts();
 </script>
-
 </body>
 </html>
